[package]
name = "enhance"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Estimate resource requirements for enhance equipments"
repository = "https://github.com/oovm/knights-tour"
documentation = "https://docs.rs/enhance"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"], optional = true }
itertools = "0.10.5"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]

[features]
default = []
