[package]
name = "kejin"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Hamiltonian path solver"
repository = "https://github.com/oovm/knights-tour"
documentation = "https://docs.rs/hamiltonian"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde_json = "1.0.96"

[dependencies.enhance]
version = "0.0.*"
path = "../enhance"
features = ["serde"]

[dev-dependencies]

[features]
default = []
